8244278: Excessive code cache flushes and sweeps

Reviewed-by: neliasso